[package]
name = "rust_gcode_sender"
version = "0.1.0"
authors = ["karl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3"
gcode = "0.6"
regex = "1"
rayon = "1.3"


# [dependencies.iced]
# version = "0.1"
# features = ["canvas"]